ajout topology
